src/test/fixtures/kphp_functions/not_support_functions_with_namespace-1.fixture.php
<?php

namespace Ns1;

function end(object|array &$array): string {
    return "";
}

$arr = [];

end($arr);
<error descr="KPHP does not support reset()">reset($arr)</error>;
<error descr="KPHP does not support reset()">\reset($arr)</error>;
<error descr="KPHP does not support end()">\end($arr)</error>;
